# swb8

./: .gitignore  .gitmodules  CMakeLists.txt  check_res.sh  clean.sh  clean_tpm.sh  configure-dl.sh  configure-nagra.sh  configure-release.sh  configure.sh  docker-make.sh  generate_release_seed.sh  inatel_report.txt  make_luajit.sh  mb_test.cpp  project_version_seed.h  run_gdb_script_seed.txt  run_shell_script_serial_seed.sh  run_shell_script_telnet_seed.sh  toolchain_mips_ali.txt  toolchain_mips_montage.txt
extra/: CMakeLists.txt  S99mbtpm  Tests Century TPM.postman_collection.json  config_teste_final.json  copy-files.sh  crc16.cpp  dump_lineup.sh  flash-montage-nfs.txt  flash-montage.txt  fnvsum.cpp  gen_service_category_map.sh  hex_transform.cpp  make_uboot_scr.sh  render_checklist_pdf.py  sat-exporter.py  sat.sql  uboot_century_nand.env  uboot_century_nfs.env  update_usb.sh
extra/signed/: Readme.md  gpg_decrypt.sh  mkts  prepare_files_to_signed.sh
extra/usb/: libpq.so.5  start.sh  update.sh
src/: CMakeLists.txt  mb_channel_ranking.cpp  mb_channel_ranking.h  mb_demux_channel_list.cpp  mb_demux_channel_list.h  mb_demux_lineup.cpp  mb_demux_lineup.h  mb_demux_lineup_claro.cpp  mb_demux_lineup_claro.h  mb_demux_lineup_generic.cpp  mb_demux_lineup_generic.h  mb_demux_lineup_sky.cpp  mb_demux_lineup_sky.h  mb_demux_table_manager.cpp  mb_demux_table_manager.h  mb_events.h  mb_main.cpp  mb_main.h  mb_pg.cpp  mb_pg.h  mb_remote_control_handler.cpp  mb_remote_control_handler.h  mb_rest_server.cpp  mb_rest_server.h  mb_table_map.h  mb_zone_id.cpp  mb_zone_id.h  sm_main.cpp  sm_main.h
src/cas/: CMakeLists.txt
src/cas/nagra/: .gitignore  CMakeLists.txt  mb_acs_reencrypt.cpp  mb_acs_reencrypt.h  mb_cas_main.cpp  mb_cas_main.h  mb_casn.cpp  mb_ird_command.cpp  mb_ird_command.h  mb_nagra.cpp  mb_nagra.h  mb_nuid.cpp  mb_pvr.cpp  mb_pvr.h  mb_talts_main.cpp
src/cas/nagra/cak/: CMakeLists.txt  QalEnvRln.xml  ca_cakx.h  ca_cect.h  (+22 more)
src/common/: .gitignore  CMakeLists.txt  SHA256.h  constexpr-xxh3.h  mb_assert.h  mb_backup_service_categories.h  mb_config.cpp  mb_config.h  mb_debug.h  mb_globals.cpp  mb_globals.h  mb_hash.cpp  mb_hash.h  mb_ip_sat_monitor_seed.h  mb_lineup.cpp  mb_lineup.h  mb_satellites.cpp  mb_satellites.h  mb_state_file.h  mb_types.cpp  mb_types.h  mb_version.h  static_string.h
src/dlgui/: CMakeLists.txt  mb_main_dlgui.cpp  mb_main_dlgui.h
src/dvb/: CMakeLists.txt  mb_dvb_bat.cpp  mb_dvb_bat.h  mb_dvb_cat.cpp  mb_dvb_cat.h  mb_dvb_century.cpp  mb_dvb_century.h  mb_dvb_eit.cpp  mb_dvb_eit.h  mb_dvb_eitv.cpp  mb_dvb_eitv.h  mb_dvb_globals.cpp  mb_dvb_globals.h  mb_dvb_idescriptor_interface.cpp  mb_dvb_idescriptor_interface.h  mb_dvb_itransport_stream_interface.cpp  mb_dvb_itransport_stream_interface.h  mb_dvb_nit.cpp  mb_dvb_nit.h  mb_dvb_ota.cpp  mb_dvb_ota.h  mb_dvb_pat.cpp  mb_dvb_pat.h  mb_dvb_pmt.cpp  mb_dvb_pmt.h  mb_dvb_sdt.cpp  mb_dvb_sdt.h  mb_dvb_si_table.cpp  mb_dvb_si_table.h  mb_dvb_skw.cpp  mb_dvb_skw.h  mb_dvb_tables.h  mb_dvb_tdt.cpp  mb_dvb_tdt.h  mb_dvb_tot.cpp  mb_dvb_tot.h  mb_dvb_transport_stream.cpp  mb_dvb_transport_stream.h  mb_dvb_types.cpp  mb_dvb_types.h  (+2 more)
src/hal/: .gitignore  CMakeLists.txt  mb_demux.h  mb_demux_common.cpp  mb_demux_macros.h  mb_diseqc.h  mb_display.h  mb_dvb_subtitle_parser.cpp  mb_dvb_subtitle_parser.h  mb_gpio.h  mb_hal_system_select_seed.h  mb_hdmi.h  mb_lnb_config.cpp  mb_lnb_config.h  mb_media_player.h  mb_otp.h  mb_player.h  mb_player_cc.cpp  mb_remote_control.h  mb_remote_control_keys.cpp  mb_remote_control_keys.h  mb_sound.h  mb_system.h  mb_tuner.h  mb_tuner_signal_info.h  mb_watchdog.h
src/hal/ALi/: CMakeLists.txt  SQSL_Century.c  kdevelop_include_directories.txt  mb_ali_globals.cpp  mb_ali_globals.h  mb_demux.cpp  mb_diseqc.cpp  mb_display.cpp  mb_gpio.cpp  mb_hal_config.h  mb_hdmi.cpp  mb_media_player.cpp  mb_otp.cpp  mb_player.cpp  mb_remote_control.cpp  mb_sound.cpp  mb_system.cpp  mb_tuner.cpp  mb_watchdog.cpp
src/hal/Montage/: CMakeLists.txt  mb_demux.cpp  mb_display.cpp  mb_hal_config.h  mb_hdmi.cpp  mb_montage_globals.cpp  mb_montage_globals.h  mb_player.cpp  mb_player_hls.cpp  mb_remote_control.cpp  mb_system.cpp  mb_tuner.cpp  mb_watchdog.cpp
src/tasks/: mb_task.cpp  mb_task.h  mb_task_application.cpp  mb_task_application.h  mb_task_cas.cpp  mb_task_cas.h  mb_task_database.cpp  mb_task_database.h  mb_task_demux.cpp  mb_task_demux.h  mb_task_eit_events.cpp  mb_task_eit_events.h  mb_task_osd.cpp  mb_task_osd.h  mb_task_player.cpp  mb_task_player.h  mb_task_remote_control.cpp  mb_task_remote_control.h  mb_task_tuner.cpp  mb_task_tuner.h  sm_task_sat_monitor.cpp  sm_task_sat_monitor.h
src/tasks/private/: mb_task_dump_params.cpp  mb_task_dump_params.h  mb_task_ipc_messages.h  mb_task_macros.h  mb_task_mqueue_helpers.cpp  mb_task_mqueue_helpers.h
src/tpm/: CMakeLists.txt  mb_connection_context.cpp  mb_connection_context.h  mb_http_utils.cpp  mb_http_utils.h  mb_main_tpm.cpp  mb_main_tpm.h  mb_task_http_server.cpp  mb_task_http_server.h  mb_tpm.cpp  mb_tpm.h  mb_tpm_utils.cpp  mb_tpm_utils.h  tpm_api.c  tpm_api.h  tpm_init.c  tpm_init.h
ui/lvgl/: CMakeLists.txt  mb_dfb_terminal_task.cpp  mb_dfb_terminal_task.h  mb_lnbf_detection.cpp  mb_lnbf_detection.h  mb_menu_data.h  mb_menu_resources.h  mb_osd.cpp  mb_osd.h  mb_osd_activate.cpp  mb_osd_activate.h  mb_osd_audio_lr.cpp  mb_osd_audio_lr.h  mb_osd_auto_search_channel_list.cpp  mb_osd_auto_search_channel_list.h  mb_osd_auto_search_choose_satellite.cpp  mb_osd_auto_search_choose_satellite.h  mb_osd_box_info.cpp  mb_osd_box_info.h  mb_osd_breadcrumb.cpp  mb_osd_breadcrumb.h  mb_osd_ca_info.cpp  mb_osd_ca_info.h  mb_osd_change_channel.cpp  mb_osd_change_channel.h  mb_osd_change_password.cpp  mb_osd_change_password.h  mb_osd_channel_detail.cpp  mb_osd_channel_detail.h  mb_osd_channel_info.cpp  mb_osd_channel_info.h  mb_osd_channel_list.cpp  mb_osd_channel_list.h  mb_osd_channel_list_update.cpp  mb_osd_channel_list_update.h  mb_osd_choose_home_satellite.cpp  mb_osd_choose_home_satellite.h  mb_osd_clock.cpp  mb_osd_clock.h  mb_osd_closed_caption.cpp  (+143 more)
(+227 files in other folders)
