add_library(Nagra::CAK STATIC IMPORTED GLOBAL)
add_library(Nagra::NAK STATIC IMPORTED GLOBAL)
add_library(Nagra::TVD STATIC IMPORTED GLOBAL)

set_target_properties(Nagra::CAK PROPERTIES
    INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}"
    IMPORTED_CONFIGURATIONS "RELEASE;DEBUG"
    IMPORTED_LINK_INTERFACE_LANGUAGES_DEBUG "C"
    IMPORTED_LINK_INTERFACE_LANGUAGES_RELEASE "C"
    IMPORTED_LOCATION_DEBUG "${CMAKE_CURRENT_SOURCE_DIR}/cak8.singlelib_posix.debug.mips-mti-linux-gnu-gcc.a"
    IMPORTED_LOCATION_RELEASE "${CMAKE_CURRENT_SOURCE_DIR}/cak8.singlelib_posix.release.mips-mti-linux-gnu-gcc.a"
    MAP_IMPORTED_CONFIG_RELWITHDEBINFO Release
    MAP_IMPORTED_CONFIG_MINSIZEREL Release
)

set_target_properties(Nagra::NAK PROPERTIES
    INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}"
    IMPORTED_CONFIGURATIONS "RELEASE;DEBUG"
    IMPORTED_LINK_INTERFACE_LANGUAGES_DEBUG "C"
    IMPORTED_LINK_INTERFACE_LANGUAGES_RELEASE "C"
    IMPORTED_LOCATION_DEBUG "${CMAKE_CURRENT_SOURCE_DIR}/cak8.singlelib_posix.debug.mips-mti-linux-gnu-gcc-NAK.a"
    IMPORTED_LOCATION_RELEASE "${CMAKE_CURRENT_SOURCE_DIR}/cak8.singlelib_posix.release.mips-mti-linux-gnu-gcc-NAK.a"
    MAP_IMPORTED_CONFIG_RELWITHDEBINFO Release
    MAP_IMPORTED_CONFIG_MINSIZEREL Release
)

set_target_properties(Nagra::TVD PROPERTIES
    INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}"
    IMPORTED_CONFIGURATIONS "RELEASE;DEBUG"
    IMPORTED_LINK_INTERFACE_LANGUAGES_DEBUG "C"
    IMPORTED_LINK_INTERFACE_LANGUAGES_RELEASE "C"
    IMPORTED_LOCATION_DEBUG "${CMAKE_CURRENT_SOURCE_DIR}/cak8.singlelib_posix.debug.mips-mti-linux-gnu-gcc-TVD.a"
    IMPORTED_LOCATION_RELEASE "${CMAKE_CURRENT_SOURCE_DIR}/cak8.singlelib_posix.release.mips-mti-linux-gnu-gcc-TVD.a"
    MAP_IMPORTED_CONFIG_RELWITHDEBINFO Release
    MAP_IMPORTED_CONFIG_MINSIZEREL Release
)
