add_library(Nagra::DVL STATIC IMPORTED GLOBAL)
add_library(Nagra::DVL_CSO_TEST STATIC IMPORTED GLOBAL)
add_library(Nagra::DVL_TVGLOBO STATIC IMPORTED GLOBAL)

set_target_properties(Nagra::DVL PROPERTIES
    INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}"
    IMPORTED_CONFIGURATIONS "RELEASE;DEBUG"
    IMPORTED_LINK_INTERFACE_LANGUAGES_DEBUG "C"
    IMPORTED_LINK_INTERFACE_LANGUAGES_RELEASE "C"
    IMPORTED_LOCATION_DEBUG "${CMAKE_CURRENT_SOURCE_DIR}/dvl.std.debug.mips-mti-linux-gnu-gcc.a"
    IMPORTED_LOCATION_RELEASE "${CMAKE_CURRENT_SOURCE_DIR}/dvl.std.release.mips-mti-linux-gnu-gcc.a"
    MAP_IMPORTED_CONFIG_RELWITHDEBINFO Release
    MAP_IMPORTED_CONFIG_MINSIZEREL Release
)

set_target_properties(Nagra::DVL_CSO_TEST PROPERTIES
    INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}"
    IMPORTED_CONFIGURATIONS "RELEASE;DEBUG"
    IMPORTED_LINK_INTERFACE_LANGUAGES_DEBUG "C"
    IMPORTED_LINK_INTERFACE_LANGUAGES_RELEASE "C"
    IMPORTED_LOCATION_DEBUG "${CMAKE_CURRENT_SOURCE_DIR}/dvl.std.debug.mips-mti-linux-gnu-gcc-cso_test.a"
    IMPORTED_LOCATION_RELEASE "${CMAKE_CURRENT_SOURCE_DIR}/dvl.std.release.mips-mti-linux-gnu-gcc-cso_test.a"
    MAP_IMPORTED_CONFIG_RELWITHDEBINFO Release
    MAP_IMPORTED_CONFIG_MINSIZEREL Release
)

set_target_properties(Nagra::DVL_TVGLOBO PROPERTIES
    INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}"
    IMPORTED_CONFIGURATIONS "RELEASE;DEBUG"
    IMPORTED_LINK_INTERFACE_LANGUAGES_DEBUG "C"
    IMPORTED_LINK_INTERFACE_LANGUAGES_RELEASE "C"
    IMPORTED_LOCATION_DEBUG "${CMAKE_CURRENT_SOURCE_DIR}/dvl.std.debug.mips-mti-linux-gnu-gcc-tvglobo.a"
    IMPORTED_LOCATION_RELEASE "${CMAKE_CURRENT_SOURCE_DIR}/dvl.std.release.mips-mti-linux-gnu-gcc-tvglobo.a"
    MAP_IMPORTED_CONFIG_RELWITHDEBINFO Release
    MAP_IMPORTED_CONFIG_MINSIZEREL Release
)
